--- a/.gitignore
+++ b/.gitignore
@@ -350,4 +350,7 @@ google-services.json
 # ProgramData of Expo
 %ProgramData%/**
 
+# package.lock.json
+package.lock.json
+
 # End of https://www.toptal.com/developers/gitignore/api/node,reactnative
