--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "react-native": "^0.71.7",
     "react-native-web": "~0.18.10",
-    "expo-image-picker": "~14.1.1"
+    "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
