--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
     "expo": "~48.0.11",
+    "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.71.7",
-    "react-native-web": "~0.18.10",
-    "expo-image-picker": "~14.1.1",
-    "expo-location": "~15.1.1"
+    "react-native-maps": "^1.7.1",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
