--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.71.7",
-    "react-native-maps": "^1.7.1",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
